# openxr-vulkan-example

./: .clang-format  CMakeLists.txt  license.md  readme.md
src/: Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Controllers.cpp  Controllers.h  DataBuffer.cpp  DataBuffer.h  Game.cpp  Headset.cpp  Headset.h  ImageBuffer.cpp  ImageBuffer.h  Main.cpp  MeshData.cpp  MeshData.h  MirrorView.cpp  MirrorView.h  Model.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderProcess.cpp  RenderProcess.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Util.cpp  Util.h  Vertex.h
src/shaders/: Basic.vert  Diffuse.frag  Diffuse.vert  Grid.frag  Grid.vert  Wall.frag
